* OTH#0000 Add 'delete_missing' flag on actives contract suspensions
* FEA#6575 Add an Interval operator for SQL operations
* OTH#0000 Fix translation of asynchronous events
* OTH#0000 Fix typo in the post commit function call decorator
* BUG#6440 No need to overwrite constrained fields in copies if they are empty
* FEA#6406 Allow to keep lines on JSON import
* OTH#0000 Fix typo in retrieving error message from job fail handler
* OTH#0000 Fix typo in function renaming
* FEA#6392 Notify event on success or failure of asynchronous task processing
* FEA#6355 Add indemnifications creation batch to batch daily chains
* OTH#6373 Post transaction commit enqueue
* FEA#0000 Add persistent wizard context

Version 1.12 - 2017-04-28* FEA#0000 New option to beautify json exported file
* FEA#0000 Add tabs to identify enabled/disabled event type actions
* FEA#0000 Add active field to event_type_action model
* FEA#0000 Remove basic benchmarking tool (moved to a standalone module)
* FEA#0000 Add configurable detail mixin

Version 1.10 - 2016-11-02
* FEA#0000 Add basic benchmarking tool to analyze server performance
* FEA#0000 Extend event action API to be able to use event description and kwargs
* FEA#0000 Add utility to generate new module file structure
* FEA#0000 Visualize the different rights of access of a user in independent list-views
* FEA#0000 Configure models to historize via the application
* FEA#0000 Rename cog_utils in coog_core

Version 1.8 - 2016-07-06
* FEA#0000 Add script to easily create dev databases
* FEA#0000 Add safe_open function for concurrent file operations
* FEA#0000 Add loader and updater functions for function fields
* FEA#0000 Add table view for history
* FEA#0000 Manage mono process batches

Version 1.6 - 2015-12-23
* FEA#0000 Add pyson filtering for actions on event type
* FEA#0000 Add list of actions on event type
* FEA#0000 Add generic version getter
* FEA#0000 Add ws_create_objects web service
* FEA#0000 Add tags to sequence