@@ -3,7 +3,6 @@
 from trytond.pool import Pool
 
 import report_engine
-import batch
 
 
 def register():
@@ -11,7 +10,6 @@ def register():
         report_engine.ReportTemplate,
         report_engine.FlowVariable,
         report_engine.TemplateVariableRelation,
-        batch.BaseMassFlowBatch,
         module='report_engine_flow', type_='model')
 
     Pool.register(
